--- a/estilo.css
+++ b/estilo.css
@@ -4,20 +4,46 @@
     align-items: center;
 }
 
-.title{
+.nav
+{
+    display: flex;
+    flex-direction: row;
+}
+.nav h3{
     font-size:xx-large;
     display: flex;
     justify-content:center;
     color:red;
     background: none;
     text-shadow: 1px 1px black;
+    position: relative;
+    
+    margin: 1rem;
+    
+}
+.nav a
+{
+    text-decoration: none;
+    position: absolute;
+    right: 2rem;
 }
 
 .container{
     display:flex;
     flex-direction: row;
     align-items: center;
-    width: 25%;
+    justify-content: center;
+    gap:2rem;
+    
+    z-index: 10;
+    background: rgba(155, 143, 143, 0.729);
+    width: 100%;
+    
+}
+.container{
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
 }
 
 .item{
@@ -28,7 +54,7 @@
     border: 1px solid black;
     background: rgba(255, 255, 255, 0.4);
     overflow: hidden;
-    height: 118px;;
+    height: 118px;
 
     
 }
@@ -36,12 +62,33 @@
 .datos{
     background: rgba(155, 143, 143, 0.729);
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     border: 1px solid black;
     border-radius: 10px;
     justify-content: center;
     gap: 1rem;
+    height: 118px;
+    
 }
+.info{
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+}
+.info h4{
+    text-align: center;
+    margin-bottom: 0.5rem;
+    margin-top: 0.3rem;
+}
+.info ul{
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+
 
 .name{
     display: flex;
@@ -75,9 +122,60 @@
     border: 1px solid black;
     background: rgba(155, 143, 143, 0.729);
     padding: 2rem;
+
 }
 
 #tarjetas:hover{
     
     border: 1px solid chocolate;
+}
+
+@media screen and (max-width:650px) {
+    .nav h3{
+        font-size: 1rem;
+        
+        right: 2rem;
+    }
+    .container{
+        gap: 5px;
+    }
+    .datos{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        
+        justify-content: flex-start;
+        gap: 0rem;
+        height: 118px;
+        flex-shrink: 2;
+        
+    }
+    .info{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 100%;
+        height: 30%;
+    }
+    .info h4{
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        width: auto;
+        font-size: 13px;
+    }
+    .info ul{
+        width: auto;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        margin: 0;
+        
+    }
+    .info ul li{
+        font-size: 10px;
+        width: auto;
+    }
 }
